--- a/project_3.html
+++ b/project_3.html
@@ -348,12 +348,13 @@
           app.stage.addChild( creditsText );
 
           // Credit information text
-          let creditInfoText = new PIXI.Text( 'Game designer: Traybourne North\n\nComposer: Trayburne North' +
-                                              '\n\nSupervisor: Traybourne North\n\nProject Manager: Traybourne North', 
-                                              { fontFamily : 'sans-serif', fontSize: 15, fill : 0xffffff } );
+          let creditInfoText = new PIXI.Text( 'Game designers: Joseph Danciu, Jevin Dement, \nKeenan Swanson, Traybourne North\n\n'
+                                            + 'Editors: Joseph Danciu, Jevin Dement, Keenan Swanson, \nTraybourne North\n\n'
+                                            + 'Project Manager: Traybourne North', 
+                                              { fontFamily : 'sans-serif', fontSize: 14, fill : 0xffffff } );
 
           // Position it and add it to the stage
-          creditInfoText.position.set( 70, 130 );
+          creditInfoText.position.set( 20, 130 );
           app.stage.addChild( creditInfoText );
 
           // Back to menu text
