--- a/project_3.html
+++ b/project_3.html
@@ -326,10 +326,10 @@
           let creditInfoText = new PIXI.Text( 'Game designers: Joseph Danciu, Jevin Dement, \nKeenan Swanson, Traybourne North\n\n'
                                             + 'Editors: Joseph Danciu, Jevin Dement, Keenan Swanson, \nTraybourne North\n\n'
                                             + 'Project Manager: Traybourne North', 
-                                              { fontFamily : 'sans-serif', fontSize: 14, fill : 0xffffff } );
+                                              { fontFamily : 'sans-serif', fontSize: 14, fill : 0x000000 } );
 
           // Position it and add it to the stage
-          creditInfoText.position.set( 70, 130 );
+          creditInfoText.position.set( 35, 130 );
           app.stage.addChild( creditInfoText );
 
           // Back to menu text
